static/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}



*{
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}



html, body {
    color: #224e70;
    font-family: verdana;
    height: 100%;
    margin: 0;
    overflow: hidden;
    width: 100%;
    -webkit-overflow-scrolling: touch;
}


body, .header, .title {
    background: white;
}


a {
    color: inherit;
    text-decoration: none;
}

a:hover{
    color: #224e70;
}

li {
    list-style: none;
}

p {
    margin: 0;
}


/*ROW*/
.row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
}



/**CONTAINER**/

.container {
    display: block;
    flex-direction: column;
    height: 100%;
    margin: auto;
    max-width: 1100px;
    overflow: auto;
    width: 85%;
}


/* CONTENT */

.content {
    display: flex;
    flex-direction: column;
    height: calc(100% - 4em);
    margin-top: 3.5em;
    overflow-y: auto;
    /*overflow-x: hidden;*/
    /*width: 100%;*/
}


.title {
    margin-top: .3em;
    color: #9f9696;
    font-size: 1.25em;
    font-style: italic;
    /*margin-top: .1em;*/
    position: absolute;
    width: 85%;
    max-width: 1100px;
}


/**HEADER**/
.header {
    align-items: flex-end;
    display: flex;
    flex-wrap: wrap;
    height: 3.5em;
    justify-content: space-between;
    max-width: 1100px;
    position: absolute;
    width: 85%;
}


/** Name **/
.name {
    display: flex;
    font-size: 2.2em;
    width: 85%;
}


#withers {
    color: #9f9696;
}


/** Hamburger **/

.hamburger svg {
    fill: #224e70;
    width: 2em;
}


/*NAVIGATION*/
#nav {
    background-color: white;
    display: flex;
    font-size: 1em;
    height: 2.5em;
    position: absolute;
    top: 3.5em;
    left: 0;
    transform: translate(-150%, 0px);
    transition: all 0.4s ease;
    padding-top: .5em;
    width: 100%;
    z-index: 10;
}

#nav.open{
    z-index: 3;
    transform: translate(0, 0);
    transition: all 0.4s ease;
}

.nav-option {
    color: #9f9696;
    margin-left: 1.5em;
    padding: 0 0;
}

.nav-option:first-child {
    margin-left: 3px;
}

.nav-sub-option {
    color: #9f9696;
    font-size: .8em;
    margin: 1em 1em 0;
}

.nav-sub-option:last-child {
    margin: 1em;
}


.dropdown-content {
    background-color: #f9f9f9;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    display: none;
    flex-direction: column;
    padding: 0;
    position: absolute;
    z-index: 11;
}


.dropdown:hover .dropdown-content {
    display: flex;
}


/* MAIN PAGE*/

#main-frame {
    align-items: center;
    display: flex;
    height: calc(100% - 2.7em);
    justify-content: center;
    margin-top: 1.1em;
    overflow: hidden;
    position: relative;
    width: 100%;
}

.main-pic {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    width: auto%;
    height: auto;
    min-width: 100%;
    min-height: 100%;
}


#pic-top {
    z-index: 1;
}

#pic-bottom {
    z-index: 0;
}




/* GALLERY */

/*ROW*/
.g-row {
    margin-top: 2.5em;
}

.box {
    align-items: center;
    color:  #9f9696;
    /*display: flex;*/
    /*flex-direction: column;*/
    height: 100%;
    margin: 0 0 1em 0;
    padding: 5px;
    width: 100%;
}


/*.frame {
    display: flex;
    margin-bottom: 10px;
    width: 100%;
}*/

.box :hover {
    box-shadow: 0 15px 15px;
}


.work {
    display: flex;
    /*height: 100%;*/
    margin-bottom: .3em;
    object-fit: contain;
    width: 100%;
}


/*  Gallery */

.gal-thumbs {
    display: flex;
    flex-wrap: wrap;
    height: 90%;
    justify-content: space-between;
    margin-top: 2em;
    overflow: scroll;
    width: 100%;
    padding: 4px;
    overflow-x: hidden;
}



.gal-container {
    display: flex;
    margin-bottom: .5em;
    width: 100%;
}


.gal-polaroid {
    background: white;
    box-shadow: 0 4px 6px 2px rgba(0,0,0,.3);
    margin: .5em 0 1em 0;
    padding: 10px 10px .3em;
    text-align: center;
    width: 100%;
}


.gal-pic {
    /*object-fit: contain;*/
    width: 100%;
}


.gal-polaroid-title {
    font-size: .7em;
    margin: .5em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}


.painting {
    /*display: flex;*/
    /*flex-direction: column;*/
    /*height: calc(100% - 1em);*/
    margin: auto;
    /*position: relative;*/
    top: 0;
    left: 0;
    /*transition: transform 0.4s ease;*/
    /*max-width: calc(100% - 1em);*/
    z-index: 100;
}


.painting-pic {
    /*display: flex;*/
    display: none;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: absolute;
    margin:auto;
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

/*.fade-pic {
    animation: fadein 3s;
}*/
/* ... */

